--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
 <header>
-    <h1>Titulo do site</h1>
+    <h1>Curso teste</h1>
 </header>
 <article>
-    <h2>Artigo 001</h2>
-    <p>Texto Artigo 001</p>
+    <h2>Curso html simples</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sed ea optio placeat assumenda inventore ipsa quia pariatur totam aut blanditiis, cum provident dolor voluptate nihil ipsum voluptatibus? Reiciendis, ullam!</p>
 </article>
 <article>
-    <h2>Artigo 002</h2>
-    <p>Texto Artigo 002</p>
+    <h2>Curso javascript</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores omnis maiores quidem architecto porro eligendi totam quae veniam aperiam repellat, consequatur debitis blanditiis perferendis deleniti exercitationem voluptatum ullam error? Excepturi.</p>
 </article>
 
     </main>
